0.6
 - ct$source() now always assumes UTF-8 data, even on Windows.

0.5
 - Add support for Typed Arrays