@@ -1,5 +1,6 @@
 0.6
  - ct$source() now always assumes UTF-8 data, even on Windows.
+ - Use the new V8_types.h feature from Rcpp 0.11.5
 
 0.5
  - Add support for Typed Arrays
